Changing logo link

--- a/tools/meme/defenders-meme/index.html
+++ b/tools/meme/defenders-meme/index.html
@@ -18,8 +18,8 @@
   <link href="../../stylesheets/sites/sbnation-9bbe5024.css" rel="stylesheet" />
   <script src="../../javascripts/sites/sbnation-3dbde1fc.js"></script>
   <div class="header-logo">
-    <a href="../../index.html" class="header-logo-link">
-      <img style="display:block;margin:20px auto 0px auto;height:80px;" class="header-logo-image" src="../../images/defenderstech-logo.png">
+    <a href="https://defenderstech.github.io/tools/meme/defenders-meme/" class="header-logo-link">
+      <img style="display:block;margin:20px 20px 0px 20px;height:80px;" class="header-logo-image" src="../../images/defenderstech-logo.png">
     </a>
   </div>
   <script src="../../javascripts/header-242a529b.js"></script>
