--- a/tools/meme/defenders-meme/index.html
+++ b/tools/meme/defenders-meme/index.html
@@ -27,7 +27,7 @@
 <div class="pick-tool"></div>
 
 <div class="clearfix content" id="meme">
-  <h3 style="color:#515153">An Image Builder builder for human rights organizations supported by DefendDefenders</h3>
+  <h3 style="color:#515153">An Image Builder for human rights organizations supported by DefendDefenders</h3>
 
   <div class="m-meme">
     <form class="m-editor" id="meme-editor-view">
