--- a/tools/meme/defenders-meme/index.html
+++ b/tools/meme/defenders-meme/index.html
@@ -122,7 +122,7 @@
     </div>
     <div id="logo-color-container">
     <h4>Logo<h4>
-    <select class="watermark-color" id="watermark">
+    <select class="watermark" id="watermark">
       <option value="" disabled>Select logo</option>
     </select>
     <select class="logo-side" id="logo-side">
