Correct logo linkages

--- a/tools/meme/defenders-meme/index.html
+++ b/tools/meme/defenders-meme/index.html
@@ -122,8 +122,11 @@
     </div>
     <div id="logo-color-container">
     <h4>Logo<h4>
-    <select class="watermark" id="watermark">
+    <select class="watermark-color" id="watermark-color">
       <option value="" disabled>Select logo</option>
+      <option value="default">Default</option>
+      <option value="light">Light</option>
+      <option value="dark">Dark</option>
     </select>
     <select class="logo-side" id="logo-side">
       <option value="" disabled>Select logo side</option>
